Added build controller for creating a new build directory and to fetch all builds for a game
